--- a/terraform-mutable/Jenkinsfile
+++ b/terraform-mutable/Jenkinsfile
@@ -1,5 +1,5 @@
 @Library('roboshop-shared-library@main') _
 
-env.REPONAME="cart"
+env.REPONAME="catalogue"
 env.TERRAFORM_DIR="terraform-mutable"
 terraform()
